<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tong@todo.todo">tong</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>msgpack</depend>
  <depend>librealsense2-dev</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>X11</depend>


  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
